--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -16,6 +16,7 @@ top: -22px;
     width: 90%;
     margin: 0 auto;
     position: relative;
+    height: 100%;
 }
 .triangle-illustration{
     position: absolute;
@@ -62,7 +63,7 @@ top: -22px;
 }
 .btn-primary{
     width: 158px;
-    border: 1px solid #7B7B7B;
+    border: 1px solid #ffffff;
 }
 .btn-secondary{
     width: 184px;
@@ -147,6 +148,14 @@ width: 712px;
     height: 66px;
     background-color: #fff;
     border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.technology__icons div svg{
+    fill: #34488A;
+    width: 23px;
+    height: 23px;
 }
 
 .boxes{
@@ -156,7 +165,7 @@ width: 712px;
 
 .team-section{
     width: 100%;
-    height: 848px;
+    height: 648px;
     position: relative;
     background-color: #fff;
     overflow: hidden;
@@ -318,6 +327,8 @@ line-height: 21px;
 width: 75%;
 }
 
+}
+
 
 @media screen and (max-width:725px){
     .technology__body h2{
@@ -331,7 +342,7 @@ width: 75%;
     line-height: 26px;
     }
 }
-}
+
 
 @media screen and (max-width:490px){
     .first-person,.fourth-person{
@@ -343,3 +354,25 @@ width: 75%;
         height: 80px;
     }
 }
+
+@media screen and (max-width:360px){
+    .hero__top__container{
+        width: 500px;
+        
+    }
+    .hero__top__container h1{
+        font-size: 38px;
+        width: 90%;
+        line-height: 49px;
+    }
+    .hero__top__container p{
+        font-size: 18px;
+    line-height: 21px;
+    width: 75%;
+    }
+    .container{
+        width:95%;
+        margin: 0 auto;
+    }
+    
+    }
