--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -31,6 +31,10 @@ color: #999898;
     color: #fff;
     font-size: 23px;
 }
+/* .footer__company_info img{
+    width: 190px;
+    height: auto;
+} */
 
 .footer__company_info p{
     color: #999898;
