--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,45 +1,64 @@
-.navbar{
-    width: 100%;
-    height: 85px;
-    margin: 15px auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    z-index: 4;
-  
+.navbar {
+  width: 100%;
+  height: 85px;
+  margin: 15px auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 999;
 }
 
-.brand-logo{
-    display: block;
-    width: 130px;
-    height: auto;
+.brand-logo {
+  display: block;
+  width: 130px;
+  height: auto;
 }
-.brand-logo img{
-    width: 100%;
-    height: auto;
+.brand-logo img {
+  width: 100%;
+  height: auto;
 }
 
 nav ul {
-    gap:16px;
+  gap: 16px;
 }
-nav ul li a{
-    text-decoration: none;
-    font-size: 14px;
-line-height: 16px;
-text-align: center;
-
-color: #C8C8C8;
-
-
+nav ul li a {
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  transition: all 0.2s ease-in-out;
+  color: #c8c8c8;
+  position: relative;
 }
-nav ul li > a:hover{
-    color: #fff;
-    font-weight: bold;
+nav ul li > a:hover {
+  color: #fff;
 }
 
+.dropdown-container {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  position: relative;
+  justify-content: center;
+}
 
-@media screen and (max-width:768px){
-    nav{
-        display: none;
-    }
+.dropdown {
+  position: absolute;
+  top: 25px;
+  left: 0px;
+  display: none;
+  flex-direction: column;
+}
+.toggle_enable {
+  display: flex;
+}
+.dropdown span {
+  display: flex;
+  height: 25px;
+  align-items: center;
+}
+@media screen and (max-width: 768px) {
+  nav {
+    display: none;
+  }
 }
